--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.2",
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
-    "react-twitter-widgets": "^1.11.0"
+    "react-twitter-widgets": "^1.11.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
