--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.18.0",
+    "html-react-parser": "^5.1.6",
     "js-cookie": "^3.0.5",
+    "quill-image-upload": "^0.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.1",
