--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-quill": "^2.0.0",
@@ -27,7 +28,7 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
-    "react-twitter-widgets": "^1.11.0",
+    "react-twitter-embed": "^4.0.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
