--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-html-parser": "^2.0.6",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "html-react-parser": "^5.1.6",
@@ -25,7 +26,8 @@
     "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
     "react-twitter-embed": "^4.0.4",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "vite-plugin-require": "^1.1.14"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
