--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^10.18.0",
     "html-react-parser": "^5.1.6",
     "js-cookie": "^3.0.5",
+    "quill": "^1.3.7",
     "quill-image-upload": "^0.1.3",
+    "quill-resize-module": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
@@ -26,6 +28,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.9.0",
+    "react-share": "^5.1.0",
     "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
     "react-twitter-embed": "^4.0.4",
