--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html-react-parser": "^5.1.6",
     "js-cookie": "^3.0.5",
     "quill": "^1.3.7",
+    "quill-image-resize-module-react": "^3.0.0",
     "quill-image-upload": "^0.1.3",
     "quill-resize-module": "^1.2.4",
     "react": "^18.2.0",
