--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "github:hmtri1011/ckeditor5-build-classic",
+    "@ckeditor/ckeditor5-build-classic": "^41.3.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "axios": "^1.6.5",
     "flowbite": "^2.2.1",
