--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.9.0",
