--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.18.0",
     "html-react-parser": "^5.1.6",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "quill": "^1.3.7",
     "quill-image-resize-module-react": "^3.0.0",
     "quill-image-upload": "^0.1.3",
