--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
     "react-twitter-embed": "^4.0.4",
+    "react-twitter-widgets": "^1.11.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
